<resources>
    <string name="app_name">Android Core Sandbox</string>
    <string name="app_name_first_main_activity">@string/app_name</string>
    <string name="app_name_second_main_activity">Android Core Sandbox (Second Main Activity)</string>
    <string name="main_activity">Второе Main-Activity</string>
    <string name="start_activity_button_1">start Activity (явный вызов)</string>
    <string name="start_activity_button_2">start Activity (неявный вызов)</string>
    <string name="edit_text_hint">Введите текст</string>
    <string name="ok">OK</string>
    <string name="start_activity_button_3">start activity for result (deprecated)</string>
    <string name="empty_return">Return from StartActivityForResult: data is empty</string>
    <string name="return_from_activity">Return from StartActivityForResult: %1$s</string>
    <string name="return_from_activity_new">Return from StartActivityForResultNew: %1$s</string>
    <string name="start_activity_button_4">"Activity Result Api (New) "</string>
    <string name="system_call_web">Web</string>
    <string name="system_call_map">Map</string>
    <string name="system_call_tel">Call</string>
    <string name="start_activity_button_5">Вызов системных приложений</string>
    <string name="start_activity_button_6">Menu Example</string>
    <!--Menu items on ActionBar MenuExampleActivity-->
    <string name="menu_item_title_1">Пункт меню 1</string>
    <string name="menu_item_title_2">Пункт меню 2</string>
    <string name="menu_item_title_3">Пункт меню 3</string>
    <string name="menu_item_title_4">Пункт меню 4</string>
    <string name="menu_item_title_5">Пункт меню 5 и ооооочень длинный текст</string>
    <!--Context menu items-->
    <string name="context_menu_item_1_title">Выключает пункт меню 5,\nпринадлежащий группе с \nid menu_group_1</string>
    <string name="check_box_menu_description">Чекбокс включения группы</string>
    <string name="checkbox_overflow">Чекбокс для перемещения первых двух элементов в Overflow</string>
    <string name="start_activity_button_7">Preferences</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="start_activity_button_8">Handler</string>
    <string name="activity_handler_example_text_start">start background task…</string>
    <string name="activity_handler_example_text_finish">finish background task!</string>
    <string name="start_activity_button_9">AsyncTask (deprecated)</string>
    <string name="start">start</string>
    <string name="result">result</string>
    <string name="stop">stop</string>
    <string name="start_activity_button_10">Service</string>
    <string name="START_SERVICE_CONSTANT">START_SERVICE_CONSTANT</string>
    <string name="pending_intent">Использование PendingIntent для обратной связи от сервиса</string>
    <string name="start_pending_intent">start (pending intent)</string>
    <string name="result_canceled">RESULT_CANCELED</string>
    <string name="broadcastreceiver">Использование BroadcastReceiver для обратной связи от сервиса</string>
    <string name="start_broadcast_receiver">start (broadcast receiver)</string>
    <string name="start_binding">Использование Binding для обратной связи от сервиса</string>
    <string name="bind">bind</string>
    <string name="unbind">unbind</string>
    <string name="unbind_service_text">Unbind BindingService</string>
    <string name="start_activity_button_11">SQLite example</string>
    <string name="person_name">person_name:</string>
    <string name="hint_person_name">Введите имя клиента</string>
    <string name="person_age">person_age:</string>
    <string name="hint_person_age">Введите возраст клиента</string>
    <string name="delete">DELETE</string>
    <string name="clear_all_table">CLEAR ALL TABLE</string>
    <string name="hint_person_id">Идентификатор клиента (опционально)</string>
    <string name="person_id">person_id</string>
    <string name="start_activity_button_12"><![CDATA[ViewModel&RxJava]]></string>
    <string name="start_activity_button_13"><![CDATA[ViewModel&LiveData]]></string>
    <string name="start_activity_button_14">WorkManager</string>
    <string name="start_periodic_work">start periodic work</string>
    <string name="cancel_periodic_work">cancel periodic work</string>
    <string name="start_activity_button_15">Data Binding</string>
    <string name="start_activity_button_16">Location</string>
    <string name="network_provider">NETWORK_PROVIDER</string>
    <string name="gps_provider">GPS_PROVIDER</string>
    <string name="start_gps">Start (GPS)</string>
    <string name="start_network">Start (NETWORK)</string>
    <string name="location_settings">location settings</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="title_fragment1">Fragment 1</string>
    <string name="title_fragment2">Fragment 2</string>
    <string name="title_fragment3">Fragment 3</string>
    <string name="start_activity_button_17">Navigation AC</string>
    <string name="start_activity_button_18">CustomView</string>

    <string name="widget_name">My first widget</string>
    <string name="widget_text">Text in widget</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
</resources>