<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sqlite.SQLiteExampleActivity">

    <TextView
        android:id="@+id/text_view_column_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:text="@string/person_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_column_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:autofillHints="Text"
        android:hint="@string/hint_person_name"
        android:inputType="text"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/text_view_column_person_name"
        app:layout_constraintStart_toEndOf="@id/text_view_column_person_name"
        app:layout_constraintTop_toTopOf="@id/text_view_column_person_name" />

    <TextView
        android:id="@+id/text_view_column_person_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="24dp"
        android:text="@string/person_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_column_person_name" />

    <EditText
        android:id="@+id/edit_text_column_person_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:autofillHints="Text"
        android:hint="@string/hint_person_age"
        android:inputType="numberDecimal"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/text_view_column_person_age"
        app:layout_constraintStart_toEndOf="@id/text_view_column_person_age"
        app:layout_constraintTop_toTopOf="@id/text_view_column_person_age" />

    <Button
        android:id="@+id/button_save_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_column_person_age" />

    <Button
        android:id="@+id/button_delete_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/delete"
        app:layout_constraintStart_toEndOf="@id/button_save_person"
        app:layout_constraintTop_toBottomOf="@id/text_view_column_person_age" />

    <Button
        android:id="@+id/button_clear_all_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin"
        android:text="@string/clear_all_table"
        app:layout_constraintStart_toEndOf="@id/button_delete_person"
        app:layout_constraintTop_toBottomOf="@id/text_view_column_person_age" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_columns"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_save_person" />

</androidx.constraintlayout.widget.ConstraintLayout>